--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h1>SpaceWalkers</h1>
   </div>
  <!-- navigation code here -->
-  <nav>
+  <nav class="spaceNAV">
     <a id="home" href="">Home</a>
     <a id="aboutUS" href="">About Us</a>
     <a id="blog" href="">Blog</a>
